--- a/index.html
+++ b/index.html
@@ -107,7 +107,10 @@
       </div>
 
       <div>
-        .splurge
+        <a href="https://tchan1002.github.io/open-letter" target="_blank"> .splurge </a>
+      </div>
+       <div>
+        <a href="https://tchan1002.github.io/intro" target="_blank"> .home </a>
       </div>
 
 
@@ -120,9 +123,25 @@
       </div>
       <div class="chunk">
         <div class="paragraph">
-        When Henry Molaison died, they put his brain to the medical equivalent of a industrial meat slicer. Slice by slice they indexed his brain in MRI scans. 
-        <br><br>
-        Henry had anterograde amnesia. His brain provided most of all we know about how memory works.
+          When Henry Molaison died, they put his brain to the medical equivalent of a industrial meat slicer. His brain was indexed in a couple thousand MRI scans.
+          <br><br>
+          Henry had anterograde amnesia. His brain provided most of all we now know about memory.
+          <br><br>
+          _
+          <br><br>
+          We're keen to distinguish ourselves from AI. While we're keen to differentiate ourselves by how we think, maybe we should think about what we consume.
+          <br><br>
+          For now, here's how our inputs differ:
+          <ul>
+            <li>our inputs are multimodal: visuals, audio, touch, taste, scent</li>
+            <li>our inputs are others: friends, family, acquaintances</li>
+            <li>our inputs are serendipitous</li>
+          </ul>
+          _
+          <br><br>
+          For the past three years I've put down a journal entry every day about what I saw, heard, did, experienced, thought about.
+          Here's that data. Open source.
+
         </div>
 
 
