--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
       </div>
 
       <div>
-        <a href="https://tchan1002.github.io/open-letter" target="_blank"> .splurge </a>
+        <a href="https://tchan1002.github.io/open-letter"> .splurge </a>
       </div>
        <div>
-        <a href="https://tchan1002.github.io/intro" target="_blank"> .home </a>
+        <a href="https://tchan1002.github.io/intro"> .home </a>
       </div>
 
 
