--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
       </div>
 
       <div>
-        <a href="https://tchan1002.github.io/open-letter"> .splurge </a>
+        <a href="https://tchan1002.github.io/open-letter" target="_self"> .splurge </a>
       </div>
-       <div>
-        <a href="https://tchan1002.github.io/intro"> .home </a>
+      <div>
+        <a href="https://tchan1002.github.io/intro" target="_self"> .home </a>
       </div>
 
 
@@ -129,7 +129,7 @@
           <br><br>
           _
           <br><br>
-          We're keen to distinguish ourselves from AI. While we're keen to differentiate ourselves by how we think, maybe we should think about what we consume.
+          We're keen to distinguish ourselves from AI. While we tend to differentiate ourselves by how we think, maybe we should think about how we differ in what we consume.
           <br><br>
           For now, here's how our inputs differ:
           <ul>
