--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           </ul>
           _
           <br><br>
-          For the past three years I've put down a journal entry every day about what I saw, heard, did, experienced, thought about.
+          For the past three years, I've put down a journal entry every day about what I saw, heard, did, experienced, thought about.
           Here's that data. Open source.
 
         </div>
