--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           <br><br>
           _
           <br><br>
-          We're keen to distinguish ourselves from AI. While we tend to differentiate ourselves by how we think, maybe we should think about how we differ in what we consume.
+          We're keen to distinguish ourselves from AI. While we tend to differentiate ourselves by how we think, maybe the real difference is in what we consume.
           <br><br>
           For now, here's how our inputs differ:
           <ul>
