--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <div class="paragraph">
           When Henry Molaison died, they put his brain to the medical equivalent of a industrial meat slicer. His brain was indexed in a couple thousand MRI scans.
           <br><br>
-          Henry had anterograde amnesia. His brain provided most of all we now know about memory.
+          Henry had anterograde amnesia. His brain provides most of all we now know about memory.
           <br><br>
           _
           <br><br>
