--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
       <div>
         <a href="https://tchan1002.github.io/open-letter" target="_self"> .splurge </a>
       </div>
+       <div>
+        <a href="https://tchan1002.github.io/train" target="_self"> .train </a>
+      </div>
       <div>
         <a href="https://tchan1002.github.io/intro" target="_self"> .home </a>
       </div>
