--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       </div>
       <div class="chunk">
         <div class="paragraph">
-          When Henry Molaison died, they put his brain to the medical equivalent of a industrial meat slicer. His brain was indexed in a couple thousand MRI scans.
+          When Henry Molaison died, they put his brain to the medical equivalent of an industrial meat slicer. His brain was indexed in a couple thousand MRI scans.
           <br><br>
           Henry had anterograde amnesia. His brain provides most of all we now know about memory.
           <br><br>
