--- a/index.html
+++ b/index.html
@@ -142,8 +142,9 @@
           </ul>
           _
           <br><br>
-          For the past three years, I've put down a journal entry every day about what I saw, heard, did, experienced, thought about.
-          Here's that data. Open source.
+          For the past three years, I've put down a journal entry every day about what I saw, heard, did, experienced, thought about. Here's that data. Open source.
+          <br><br>
+          Coming soon.
 
         </div>
 
