--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           <br><br>
           _
           <br><br>
-          We're keen to distinguish ourselves from AI. While we tend to differentiate ourselves by how we think, maybe the real difference lies in what we consume.
+          We're keen to distinguish ourselves from AI. While we pride ourselves on how we think, maybe the real difference lies in what we consume.
           <br><br>
           For now, here's how our inputs differ:
           <ul>
