--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
       </div>
       <div class="chunk">
         <div class="paragraph">
-          When Henry Molaison died, they put his brain to the medical equivalent of an industrial meat slicer. His brain was indexed across a couple thousand scans.
+          When Henry Molaison died, they put his brain to the medical equivalent of an industrial meat slicer. They indexed his brain across a couple thousand scans.
           <br><br>
-          Henry had anterograde amnesia. His brain provided most of what we now know about memory.
+          Henry had anterograde amnesia, meaning he couldn't remember very well. But most of what we now know about memory can be attributed to him.
           <br><br>
           _
           <br><br>
