--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <div class="paragraph">
           When Henry Molaison died, they put his brain to the medical equivalent of an industrial meat slicer. His brain was indexed across a couple thousand scans.
           <br><br>
-          Henry had anterograde amnesia, meaning he couldn't remember very well. Most of what we now know about memory can be attributed to him.
+          Henry had anterograde amnesia, meaning he couldn't remember very well, yet most of what we now know about memory can be attributed to him.
           <br><br>
           _
           <br><br>
