--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
           </ul>
           _
           <br><br>
-          My name is Toby. I'm a third year at the University of Chicago studying economics and psychology—but thinking a lot about the relationship between memory, time, writing, and materialization.
+          My name is Toby. I'm a third year at the University of Chicago studying economics and psychology. Recently, I've been thinking a lot about the relationship between memory, time, writing, and materialization.
            <br><br>
-        For the past three years, I've put down a journal entry every day about what I saw, heard, did, experienced, thought about. Here's that data. Open source.
+        For the past three years, I've put down a journal entry every day about what I saw, heard, did, experienced, thought about. Here's that data. An attempt at decreasing the distance between you and me.
           <br><br>
           Coming soon.
         </div>
